# coffee-records

./: .envrc.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
coffee_records/: __init__.py  config.py  database.py
coffee_records/blueprints/: coffees.py  equipment.py  health.py  reports.py  shots.py
coffee_records/models/: __init__.py  coffee.py  equipment.py  grind_model.py  shot.py
coffee_records/schemas/: coffee.py  equipment.py  grind_model.py  shot.py
coffee_records/services/: reports.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: coffees.ts  equipment.ts  reports.ts  shots.ts
frontend/src/components/layout/: AppShell.tsx
frontend/src/components/shots/: ShotCard.tsx  TelemetryModal.tsx
frontend/src/pages/: ApiDocsPage.tsx  CoffeesPage.tsx  EditShotPage.tsx  EquipmentPage.tsx  NewShotPage.tsx  ReportsPage.tsx  ShotPlannerPage.tsx  ShotsPage.tsx
frontend/src/types/: index.ts
import_data/: Coffee Journal.ods
nginx/: coffee.drskippy.app
test/: conftest.py  test_coffees.py  test_equipment.py  test_grind_model.py  test_reports.py  test_shots.py
